Fixed X alignment on remove buttonf or media list

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,10 @@ label {
 }
 
 
+.object-fit-contain{
+    object-fit: contain;
+}
+
 
 //Border Radius
 .borderRadius-1{
